[gd_scene load_steps=2 format=3 uid="uid://bx0771l28p0cu"]

[ext_resource type="Script" path="res://ui_scenes/mainMenu/main_menu.gd" id="1_y2dfr"]

[node name="mainMenu" type="Node2D"]
script = ExtResource("1_y2dfr")

[node name="Label" type="Label" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 26.0
text = "planet sandbox test menu"

[node name="Button" type="Button" parent="."]
offset_left = 14.0
offset_top = 54.0
offset_right = 371.0
offset_bottom = 118.0
text = "save file 1 "

[node name="Button2" type="Button" parent="."]
offset_left = 15.0
offset_top = 127.0
offset_right = 372.0
offset_bottom = 191.0
text = "save file 2 "

[node name="Button3" type="Button" parent="."]
offset_left = 16.0
offset_top = 208.0
offset_right = 373.0
offset_bottom = 272.0
text = "save file 3 "

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
